WIP Build page images

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -42,6 +42,7 @@ template {
 }
 a {
   background-color: transparent;
+  text-decoration: none;
   -webkit-text-decoration-skip: objects;
 }
 a:active,
