contributing structure added
need to fix contributors table

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -469,12 +469,12 @@ iframe {
 hr {
   margin-left: 0;
   margin-right: 0;
-  margin-top: 0;
+  margin-top: 4rem;
   padding-bottom: 0;
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
-  margin-bottom: calc(1.45rem - 1px);
+  margin-bottom: 0;
   background: hsla(0, 0%, 0%, 0.2);
   border: none;
   height: 1px;
